# kennethmoreland-com.github.io

./: .gitmodules  CMakeLists.txt  hugo.yaml
content/: _index.md
content/color-advice/: example-2d-catalyst-script.py  example-2d-paraview-script.py  example-2d-paraview.pvsm  example-3d-catalyst-script.py  example-3d-paraview-script.py  example-3d-paraview.pvsm  index.md
content/color-advice/bent-cool-warm/: bent-cool-warm-paraview-colors.json  bent-cool-warm-table-byte-0008.csv  bent-cool-warm-table-byte-0016.csv  bent-cool-warm-table-byte-0032.csv  bent-cool-warm-table-byte-0064.csv  bent-cool-warm-table-byte-0128.csv  bent-cool-warm-table-byte-0256.csv  bent-cool-warm-table-byte-0512.csv  bent-cool-warm-table-byte-1024.csv  bent-cool-warm-table-float-0008.csv  bent-cool-warm-table-float-0016.csv  bent-cool-warm-table-float-0032.csv  bent-cool-warm-table-float-0064.csv  bent-cool-warm-table-float-0128.csv  bent-cool-warm-table-float-0256.csv  bent-cool-warm-table-float-0512.csv  bent-cool-warm-table-float-1024.csv  bent-cool-warm.ipynb
content/color-advice/black-body/: black-body-paraview-colors.json  black-body-table-byte-0008.csv  black-body-table-byte-0016.csv  black-body-table-byte-0032.csv  black-body-table-byte-0064.csv  black-body-table-byte-0128.csv  black-body-table-byte-0256.csv  black-body-table-byte-0512.csv  black-body-table-byte-1024.csv  black-body-table-float-0008.csv  black-body-table-float-0016.csv  black-body-table-float-0032.csv  black-body-table-float-0064.csv  black-body-table-float-0128.csv  black-body-table-float-0256.csv  black-body-table-float-1024.csv  black-body.ipynb
content/color-advice/extended-black-body/: extended-black-body-paraview-colors.json  extended-black-body-table-byte-0008.csv  extended-black-body-table-byte-0016.csv  extended-black-body-table-byte-0032.csv  extended-black-body-table-byte-0064.csv  extended-black-body-table-byte-0128.csv  extended-black-body-table-byte-0256.csv  extended-black-body-table-byte-0512.csv  extended-black-body-table-byte-1024.csv  extended-black-body-table-float-0008.csv  extended-black-body-table-float-0016.csv  extended-black-body-table-float-0032.csv  extended-black-body-table-float-0064.csv  extended-black-body-table-float-0128.csv  extended-black-body-table-float-0256.csv  extended-black-body-table-float-0512.csv  extended-black-body-table-float-1024.csv  extended-black-body.ipynb
content/color-advice/extended-kindlmann/: extended-kindlmann-paraview-colors.json  extended-kindlmann-table-byte-0008.csv  extended-kindlmann-table-byte-0016.csv  extended-kindlmann-table-byte-0032.csv  extended-kindlmann-table-byte-0064.csv  extended-kindlmann-table-byte-0128.csv  extended-kindlmann-table-byte-0256.csv  extended-kindlmann-table-byte-0512.csv  extended-kindlmann.ipynb  (+9 more)
content/color-maps/: CoolWarmFloat33.csv  DivergingColorMapWorkshop.xls  diverging_map.R  diverging_map.py  index.md
content/contact/: index.md
content/dax-pdac-2012/: CycleThreshold.py  index.md  pistoncompare.csv  thresholdexample.csv
content/education/: index.md
content/fftgpu/: index.md
content/gator/: gator.cg  index.md  tetra_constant.nvv  tetra_constant.params  tetra_linear.arb  tetra_linear.nvv  tetra_linear.params
content/highlights/: index.md
content/ldav2016/: All_Compositing_SpeedUp.csv  All_Overall_SpeedUp.csv  All_Rendering_SpeedUp.csv  Average_Overall_SpeedUp.csv  Average_Overall_SpeedUp.ipynb  Compositing_SpeedUp_Cinema.ipynb  Compositing_SpeedUp_Inverse_Cinema.ipynb  Compositing_SpeedUp_Surface_Reconstruct.ipynb  Overall_SpeedUp_Summary.ipynb  Rendering_SpeedUp.ipynb  index.md
content/parallel-scaling-metrics/: index.md
content/partial-pre-integration/: PsiGammaTable.h  index.md  sushi.cg
content/professional-activities/: index.md
content/projects/: index.md
content/publications/: index.md
content/pv-cray-xt3/: PVCrayXT3.ppt  index.md
content/pv-tutorial-sc05/: ParaView_D3.avi  ParaView_Image_Compression.avi  index.md
content/rasterization-dpp/: index.md
content/scalable-rendering/: index.md
content/time-vis/: index.md
content/topology-threading/: index.md
content/vis-pipelines/: index.md
layouts/_default/: single.html
layouts/partials/: hook_head_end.html
layouts/shortcodes/: profile-pic.html  project.html  pubtitle.html  slideshow.html  summary.html
scripts/: bib2md.py  publications.md.in  yaml2activities.py
static/: CNAME  contact.html  education.html  highlights.html  professional-activities.html  projects.html  publications.html
static/css/: kmorel.css
static/documents/: KennethMorelandPublicKey.asc  TimeVis-IEEE2007.html  VisWorkshop02.ppt  volvis04.html
(+143 files in other folders)
